fix: login asset

--- a/user-web/deploy/supervisord.conf
+++ b/user-web/deploy/supervisord.conf
@@ -4,8 +4,11 @@ file=/tmp/supervisor20190921.sock   ; (the path to the socket file)
 [supervisorctl]
 serverurl=unix:///tmp/supervisor20190921.sock ; use a unix:// URL  for a unix socket
 
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
 [supervisord]
-nodaemon=true
+nodaemon=false
 logfile=/data/user-web/log/supervisord.log
 pidfile=/data/user-web/supervisord.pid
 
